# Revival

./: CMakeLists.txt  Test.bat
Ext/Ext/Core/: Initializer.cpp  Initializer.hpp  RuntimeError.cpp  RuntimeError.hpp  Tester.cpp  Tester.hpp
Ext/Ext/Events/: Event.hpp  Eventer.cpp  Eventer.hpp
Ext/Ext/Formats/: LocalizationFile.cpp  LocalizationFile.hpp  TextFile.cpp  TextFile.hpp
Ext/Ext/Graphics/: Camera.cpp  Camera.hpp  Color.cpp  Color.hpp  Font.cpp  Font.hpp  Image.cpp  Image.hpp  Isometric.cpp  Isometric.hpp  Painter.cpp  Painter.hpp  Point2.hpp  Point2u.hpp  Rect2.hpp  Rect2u.hpp  Render.cpp  Render.hpp  Text.cpp  Text.hpp  Window.cpp  Window.hpp
Ext/Ext/Input/: MouseInput.cpp  MouseInput.hpp
Ext/Ext/Loaders/: FontLoader.cpp  FontLoader.hpp  ImageLoader.cpp  ImageLoader.hpp  LocalizationFileLoader.cpp  LocalizationFileLoader.hpp  TextFileLoader.cpp  TextFileLoader.hpp  TextLoader.cpp  TextLoader.hpp
Ext/Ext/Managers/: FontManager.cpp  FontManager.hpp  ImageManager.cpp  ImageManager.hpp  LocalizationFileManager.cpp  LocalizationFileManager.hpp  PathManager.cpp  PathManager.hpp  TextFileManager.cpp  TextFileManager.hpp  TextManager.cpp  TextManager.hpp  WidgetManager.cpp  WidgetManager.hpp
Ext/Ext/Readers/: JsonReader.cpp  JsonReader.hpp
Ext/Ext/Widgets/: Application.cpp  Application.hpp  Button.cpp  Button.hpp  Container.cpp  Container.hpp  ImageWindow.cpp  ImageWindow.hpp  Screen.cpp  Screen.hpp  Widget.cpp  Widget.hpp  Window.cpp  Window.hpp
Ext/Ext/rapidjson/: reader.h
Ext/Test/: CMakeLists.txt
Ext/Test/Core/: CMakeLists.txt  Initializer.cpp
Ext/Test/Formats/: CMakeLists.txt  LocalizationFile.cpp  TextFile.cpp
Ext/Test/Graphics/: CMakeLists.txt  Camera.cpp  Color.cpp  Point2u.cpp  Rect2u.cpp  Window.cpp
Ext/Test/Loaders/: CMakeLists.txt  FontLoader.cpp  ImageLoader.cpp  LocalizationFileLoader.cpp  TextLoader.cpp
Ext/Test/Managers/: CMakeLists.txt  FontManager.cpp  ImageManager.cpp  LocalizationFileManager.cpp  PathManager.cpp  TextFileManager.cpp  TextManager.cpp
Ext/Test/Readers/: CMakeLists.txt  JsonReader.cpp
Games/Fallout/Files/Prototypes/Critters/: Tester.json
Sources/Fallout/: main.cpp
Sources/Fallout/Critters/: Critter.cpp  Critter.hpp  Proto.cpp  Proto.hpp  ProtoLoader.cpp  ProtoLoader.hpp  Script.cpp  Script.hpp  Stats.cpp  Stats.hpp
Sources/Fallout/Game/: Critter.cpp  Critter.hpp  CritterProto.cpp  CritterProto.hpp  CritterSkills.cpp  CritterSkills.hpp  CritterStats.cpp  CritterStats.hpp  Engine.cpp  Engine.hpp  Script.hpp  Settings.cpp  Settings.hpp
Sources/Fallout/Gameplay/: Attribute.cpp  Attribute.hpp  Modifier.cpp  Modifier.hpp  Param.cpp  Param.hpp  ParamValue.cpp  ParamValue.hpp  Perk.cpp  Perk.hpp  StatValue.cpp  StatValue.hpp
Sources/Fallout/Loaders/: CritterStatLoader.cpp  CritterStatLoader.hpp
Sources/Fallout/Locations/: Data.cpp  Data.hpp  Location.cpp  Location.hpp
Sources/Fallout/Managers/: ImageManager.cpp  ImageManager.hpp  LocalizationManager.cpp  LocalizationManager.hpp  ProtoManager.cpp  ProtoManager.hpp
Sources/Fallout/Test/: CMakeLists.txt
Sources/Fallout/Test/Critters/: CMakeLists.txt  ProtoLoader.cpp  Stats.cpp
Sources/Fallout/Test/Gameplay/: Attribute.cpp  CMakeLists.txt  Modifier.cpp  Param.cpp  ParamValue.cpp  Perk.cpp  StatValue.cpp
Sources/Fallout/Test/Managers/: CMakeLists.txt  LocalizationManager.cpp
Sources/Fallout/Tiles/: Proto.cpp  Proto.hpp  ProtoLoader.cpp  ProtoLoader.hpp  Tile.cpp  Tile.hpp
Sources/Fallout/UI/: Aggregator.cpp  Aggregator.hpp  Editor.cpp  Editor.hpp  MainMenu.cpp  MainMenu.hpp  Screens.hpp  Settings.cpp  Settings.hpp
TestFiles/: TestJson.json  Text.json
TestFiles/Localizations/Russian/: MainMenu.json
